# time-tracker

./: .dockerignore  .envrc  .gitignore  .prettierrc  Dockerfile  Pipfile  README.md  conftest.py  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  time.db
app/: __init__.py  controller.py  models.py  view.py  viewmodels.py
app/cli/: data.py
app/controllers/: analytics.py  core.py  holidays.py  leave.py  settings.py  slack.py  time.py  user.py
app/controllers/user/: __init__.py  exceptions.py  token.py  util.py
app/lib/: blocks.py  database.py  email.py  logger.py  redis.py  validate.py
app/lib/util/: date.py  ensure.py  lenient.py  security.py
app/migrations/: 1726597351_add_usertoslacktoken_table.py  1726599316_add_settings_auto_update_slack_status.py  1726779728_add_usertoslacktoken_team_name.py  1733590861_add_settings_theme.py  1733593456_add_user_last_login_at.py  382a30f9ca44_add_whats_new.py  527aba039d23_add_settings_holiday_location.py
app/static/css/: bootstrap-overrides.css  bootstrap.css  bootstrap.css.map  default.css
app/static/html/: home.html
app/static/icons/: about.txt
app/static/js/: form.js  home.js  main.js
app/templates/: home.html.j2  settings.html.j2
app/templates/email/: account_exists.html.j2  email_change.html.j2  email_change_already_exists.html.j2  password_reset.html.j2  welcome.html.j2
app/templates/frames/: annual_leave_form.html.j2  clock_in_form.html.j2  entries_table.html.j2  leave_form.html.j2  time_add_edit.html.j2  time_form.html.j2  time_log_table.html.j2  time_stats.html.j2
app/templates/layouts/: basic_wrapper.html.j2  email_wrapper.html.j2  holidays.html.j2  settings.html.j2  wrapper.html.j2
app/templates/lightboxes/: time_add_edit.html.j2
app/templates/macros/: bootstrap.html.j2
app/templates/pages/: about.html.j2  (+9 more)
app/views/: callback.py  core.py  holidays.py  leave.py  settings.py  time.py  user.py
bootstrap/: build.sh  custom.scss
config/: app_config.py  app_config.py.tmpl
db/: time.db
migrations/: env.py
migrations/versions/: 277cc317025d_initial_migration.py  284a39dbc7ab_add_user_is_admin.py  90a5d48d48b3_initial_migration.py  9336c8d849a5_add_leave_public_holiday.py  e2d94f8531ec_add_usertoslacktoken_table.py  f9876948cb9d_add_leave_user_id.py
scripts/: drop_db.sh  migrate_to_alchemy.sh  reset_db.sh  run_tests.sh  sql.sh
scss/: build.sh  custom.scss
tests/: helpers.py  test_runner.py  unit.py
tests/e2e/: test_holidays.py  test_login.py  test_settings.py  test_time.py
tests/fixtures/: app.py
tests/unit/: test_calculate_expected_hours.py
tools/: ctl  ctl.sh  test_runner.py
wiki/: dynamic-frame-router.md  form-validation.md
(+35 files in other folders)
