[tool.poetry]
name = "time-tracker"
version = "0.0.1"
description = ""
authors = ["Dan Stewart <git@mail.danstewart.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.2"
pony = "^0.7.16"
click = "^8.1.0"
Flask = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
flake8 = "^4.0.1"
devtools = {extras = ["pygments"], version = "^0.8.0"}
djlint = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
ignore = "J018,H021,J004"
